--- a/SVG animation.html
+++ b/SVG animation.html
@@ -17,4 +17,5 @@ body {
   <image x="1" y="40" width="20" height="60" xlink:href="https://qph.ec.quoracdn.net/main-qimg-067b1472824ccbb15e3ca104fbd83411?convert_to_webp=true">
     <animate id="swim" attributeName="x" from="10" to="200" dur="2s"begin="click"/>
   </image>
+    <circle cx="180" cy="10" r="10" fill="yellow">
 </svg>
