--- a/SVG animation.html
+++ b/SVG animation.html
@@ -8,14 +8,14 @@ body {
 </style>
 </head>
 <body>
-
+<button onclick="partOneFunction()">Start the Race</button>
 
 <svg width="100%" viewBox="0 0 200 90" xlink:href="https://forum.unity3d.com/proxy.php?image=http%3A%2F%2Fi.imgur.com%2F6q7cXaP.png&hash=8264feb50e16791d1c32203408ec9221">
   <image x="1" y="20" width="20" height="60" xlink:href="http://rs99.pbsrc.com/albums/l316/shin_j/Pixel%20Art/FlashRun.gif~c200">
-    <animate id="swim" attributeName="x" from="10" to="200" dur="1s"begin="click"/>
+    <animate id="flash" attributeName="x" from="10" to="200" dur="1s"begin="click"/>
   </image>
-  <image x="1" y="40" width="20" height="60" xlink:href="https://qph.ec.quoracdn.net/main-qimg-067b1472824ccbb15e3ca104fbd83411?convert_to_webp=true">
-    <animate id="swim" attributeName="x" from="10" to="200" dur="2s"begin="click"/>
+  <image x="1" y="40" width="20" height="60" xlink:href="http://www.freeiconspng.com/uploads/superman-png-7.png">
+    <animate id="superman" attributeName="x" from="10" to="200" dur="2s"begin="click"/>
   </image>
     <circle cx="180" cy="10" r="10" fill="yellow">
 </svg>
